{
    "name": "GameInput",
    "maps": [
        {
            "name": "Game",
            "id": "940a3553-c6ae-4c96-b931-0b7b30193048",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "eb5a3596-f089-4068-b846-9b88396ef40c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FallUp",
                    "type": "Button",
                    "id": "b8b81a7b-cb87-43a3-a9bd-b32825806a6c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FallDown",
                    "type": "Button",
                    "id": "94d665b6-f4b4-4494-bca5-290b6da38f6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21af1ed6-6562-4575-aba3-9198c81130f2",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28573913-7c44-46dd-b9aa-69d1c7f9fcd7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a5b819c-41ed-4ecc-b8b1-8ab3989152fb",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FallUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce0068f3-0eb1-4056-8005-2537fd9a5150",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FallDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}